@@ -24,23 +24,42 @@ import net.minecraft.util.ResourceLocation;
 import net.minecraft.util.text.TextFormatting;
 import net.minecraft.world.World;
 import net.silentchaos512.gear.SilentGear;
+import net.silentchaos512.gear.api.item.ICoreItem;
 import net.silentchaos512.gear.api.parts.PartUpgrade;
+import net.silentchaos512.gear.init.ModItems;
 import net.silentchaos512.lib.item.IEnumItems;
 
 import javax.annotation.Nonnull;
 import javax.annotation.Nullable;
 import java.util.List;
 import java.util.Locale;
+import java.util.function.Predicate;
 
 public enum MiscUpgrades implements IEnumItems<MiscUpgrades, MiscUpgrades.Item> {
-    SPOON;
+    SPOON(MiscUpgrades::matchPickaxe),
+    RED_CARD(MiscUpgrades::matchAny);
 
     private final MiscUpgrades.Item item;
     private final PartUpgrade part;
 
-    MiscUpgrades() {
+    MiscUpgrades(final Predicate<ICoreItem> canApplyTo) {
         this.item = new MiscUpgrades.Item();
-        this.part = new PartUpgrade(new ResourceLocation(SilentGear.MOD_ID, "misc_" + name().toLowerCase(Locale.ROOT)));
+        ResourceLocation partName = new ResourceLocation(SilentGear.MOD_ID, "misc_" + name().toLowerCase(Locale.ROOT));
+
+        this.part = new PartUpgrade(partName) {
+            @Override
+            public boolean isValidFor(ICoreItem gearItem) {
+                return canApplyTo.test(gearItem);
+            }
+        };
+    }
+
+    private static boolean matchPickaxe(ICoreItem item) {
+        return item == ModItems.pickaxe;
+    }
+
+    private static boolean matchAny(ICoreItem item) {
+        return item != null;
     }
 
     @Nonnull
@@ -65,11 +84,11 @@ public enum MiscUpgrades implements IEnumItems<MiscUpgrades, MiscUpgrades.Item> 
     public String getName() {
         return getEnum().name().toLowerCase(Locale.ROOT) + "_upgrade";
     }
-
     public static class Item extends net.minecraft.item.Item {
         @Override
         public void addInformation(ItemStack stack, @Nullable World worldIn, List<String> tooltip, ITooltipFlag flagIn) {
             tooltip.add(TextFormatting.ITALIC + SilentGear.i18n.subText(this, "desc"));
         }
+
     }
 }
