@@ -1,0 +1,22 @@
+{
+    "type": "misc_upgrade",
+    "stats": [
+        {"name": "durability",      "value": 0.0, "op": "MUL1"},
+        {"name": "rarity",          "value": -5}
+    ],
+    "crafting_items": {
+        "normal": {
+            "item": "silentgear:red_card_upgrade"
+        }
+    },
+    "display": {
+        "hidden": false,
+        "texture_suffix": "",
+        "texture_color": "ffffff",
+        "name_color": "red"
+    },
+    "availability": {
+        "enabled": true,
+        "tool_blacklist": []
+    }
+}
