@@ -1,0 +1,29 @@
+{
+  "result": {
+    "item": "silentgear:advanced_upgrade_base",
+    "count": 1
+  },
+  "pattern": [
+    "ddd",
+    "bub",
+    "ggg"
+  ],
+  "type": "forge:ore_shaped",
+  "key": {
+    "d": {
+      "ore": "nuggetDiamond",
+      "type": "forge:ore_dict"
+    },
+    "g": {
+      "ore": "nuggetGold",
+      "type": "forge:ore_dict"
+    },
+    "b": {
+      "ore": "dyeBlue",
+      "type": "forge:ore_dict"
+    },
+    "u": {
+      "item": "silentgear:upgrade_base"
+    }
+  }
+}
