@@ -1,0 +1,16 @@
+{
+  "result": {
+    "item": "silentgear:red_card_upgrade",
+    "count": 4
+  },
+  "ingredients": [
+    {
+      "item": "silentgear:upgrade_base"
+    },
+    {
+      "ore": "dyeRed",
+      "type": "forge:ore_dict"
+    }
+  ],
+  "type": "forge:ore_shapeless"
+}
