@@ -1,0 +1,14 @@
+{
+  "result": {
+    "item": "silentgear:spoon_upgrade"
+  },
+  "ingredients": [
+    {
+      "item": "silentgear:advanced_upgrade_base"
+    },
+    {
+      "item": "minecraft:diamond_shovel"
+    }
+  ],
+  "type": "minecraft:crafting_shapeless"
+}
